# gr-mcp

./: README.md  main.py  pyproject.toml
docker/: .coveragerc  Dockerfile.gnuradio-audio  Dockerfile.gnuradio-coverage  Dockerfile.gnuradio-lora  Dockerfile.gnuradio-lora-runtime  Dockerfile.gnuradio-runtime  docker-compose.fm-receiver.yml  docker-compose.lora-receiver.yml  entrypoint-coverage.sh  entrypoint-fm.sh  entrypoint-lora.sh  entrypoint.sh  run-fm-receiver.sh  run-lora-receiver.sh
docs/agent-threads/coverage-integration/: 001-gnuradio-agent-coverage-handoff.md  002-gr-mcp-agent-design-decisions.md  003-gnuradio-agent-technical-answers.md  004-gr-mcp-agent-implementation-start.md  005-gr-mcp-agent-implementation-complete.md  006-gnuradio-agent-ready-to-test.md  007-gr-mcp-agent-smoke-test-passed.md
docs/agent-threads/xmlrpc-runtime-integration/: 002-gr-mcp-agent-proposal-response.md  (+9 more)
examples/: fm_101_1.grc  fm_receiver.grc  fm_receiver.py  fm_scanner.py  inspect_blocks.py  lora_infrastructure_test.py  lora_receiver.grc  lora_receiver.py  lora_rx_mcp.grc  lora_rx_mcp.py  lora_scanner.py
firmware/heltec-lora-beacon/: platformio.ini
src/gnuradio_mcp/: models.py  oot_catalog.py
tests/integration/: test_fm_scanner.py  test_lora_scanner.py  test_mcp_runtime.py  test_runtime_docker.py  test_server.py  test_xmlrpc_subprocess.py
tests/unit/: test_docker_middleware.py  test_flowgraph.py  test_gap_fills.py  test_oot_blocks.py  test_oot_catalog.py  test_oot_installer.py  test_ports.py  test_runtime_provider.py  test_thrift_middleware.py  test_xmlrpc_middleware.py
(+12 files in other folders)
