[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnuradio-mcp"
version = "0.2.0"
description = "A FastMCP server for gnuradio."
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12",
    "fastmcp>=3.0.0b1",
    # for gnuradio
    "mako>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
runtime = [
    "docker>=7.0",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pre-commit>=4.5",
]

[tool.pytest.ini_options]
# Tell pytest where to find the package
pythonpath = ["src", "."]
asyncio_mode = "auto"
